Fix for bug #81659, r=pinkerton/wtc, sr=sfraser.